--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "swiper": "^8.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
